[gd_scene load_steps=2 format=2]

[ext_resource path="res://script/spawner.gd" type="Script" id=1]

[node name="Spawner" type="Position3D"]
script = ExtResource( 1 )

[node name="Origin" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 36.1254, 0, 0 )

[node name="Target0" type="Position3D" parent="Origin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3831, 0, 0 )

[node name="Target1" type="Position3D" parent="Origin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.4306, -5.3236, 0 )

[node name="Target2" type="Position3D" parent="Origin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.67148, -10.0735, 0 )

[node name="Target3" type="Position3D" parent="Origin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.5577, 4.56529, 0 )

[node name="Target4" type="Position3D" parent="Origin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.13226, 9.77827, 0 )
